Added discrete rotation and zooming shortcuts

BUG:302758