krita/ui/input/kis_zoom_action.h
@@ -34,6 +34,7 @@ public:
      */
     enum Shortcuts {
         ZoomToggleShortcut, ///< Toggle zoom mode.
+        DiscreteZoomToggleShortcut, ///< Toggle discrete zoom mode
         ZoomInShortcut, ///< Zoom in by a fixed amount.
         ZoomOutShortcut, ///< Zoom out by a fixed amount.
         ZoomResetShortcut, ///< Reset zoom to 100%.
